--- a/en.html
+++ b/en.html
@@ -496,6 +496,18 @@
 
       <div class="row portfolio-container">
 
+        <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+          <h4>GExpenses</h4>
+          <div class="portfolio-wrap">
+            <img src="assets/img/project/gexpenses-logo.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <div class="portfolio-links">
+                <a href="projects/Gexpenses_en.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Project Details"><i class="bx bx-info-circle"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+      
         <div class="col-lg-4 col-md-6 portfolio-item filter-app">
           <h4>Hangman</h4>
           <div class="portfolio-wrap">
